--- a/bower.json
+++ b/bower.json
@@ -11,8 +11,9 @@
     "angular-sanitize": "1.2.16",
     "angular-animate": "1.2.16",
     "angular-route": "1.2.16",
-    "angular-ui-router": "~0.2.10",    
-    "angular-grid": "~2.0.12"
+    "angular-ui-router": "~0.2.10",
+    "angular-grid": "~2.0.12",
+    "angular-ui-utils": "~0.1.1"
   },
   "devDependencies": {
     "angular-mocks": "1.2.16",
