--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,9 @@
     "angular-route": "1.2.16",
     "angular-ui-router": "~0.2.10",
     "angular-grid": "~2.0.12",
-    "angular-ui-utils": "~0.1.1"
+    "angular-ui-utils": "~0.1.1",
+    "jquery": "1.9.1",
+    "respondJs": "~1.4.2"
   },
   "devDependencies": {
     "angular-mocks": "1.2.16",
